--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,6 @@ services:
 matrix:
   include:
   - os: linux
-    env: COMPILER=g++
     addons:
       apt:
         sources:
@@ -29,10 +28,10 @@ script:
 - wget -P $TRAVIS_BUILD_DIR/.. https://github.com/catchorg/Catch2/releases/download/v2.13.3/catch.hpp
 - cd $TRAVIS_BUILD_DIR/test
 - export CXXFLAGS="-DBARK_TEST_MYSQL_SERVER=localhost -DBARK_TEST_DATABASE_PWD="
-- make -f ./makefile.ubuntu test CXX=$COMPILER
+- make -f ./makefile.ubuntu test
 - cd $TRAVIS_BUILD_DIR/example/nanogis
-- qmake QMAKE_CXX=$COMPILER QMAKE_LINK=$COMPILER
-- make CXX=$COMPILER LINK=$COMPILER
+- qmake
+- make
 - cd $TRAVIS_BUILD_DIR
 - doxygen Doxyfile
 deploy:
